--- a/ParticleExample/ParticleExample.vcxproj
+++ b/ParticleExample/ParticleExample.vcxproj
@@ -120,6 +120,11 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="maths.h" />
+    <ClInclude Include="ParticleEmitter.h" />
+    <ClInclude Include="particle.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
