--- a/ParticleExample/ParticleExample.vcxproj.filters
+++ b/ParticleExample/ParticleExample.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="particle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectPool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
