--- a/ParticleExample/ParticleExample.vcxproj.filters
+++ b/ParticleExample/ParticleExample.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="ObjectPool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="components.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
