--- a/ParticleExample/ParticleExample.vcxproj.filters
+++ b/ParticleExample/ParticleExample.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Factory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
